--- a/type.html
+++ b/type.html
@@ -7,19 +7,60 @@
     <title>Apostrophe Colors</title>
     <link rel="preconnect" href="https://rsms.me/">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     <style>
-:root {
+body {
   font-family: "Inter", sans-serif;
 }
-@supports (font-variation-settings: normal) {
-  :root {
-    font-family: "Inter var", sans-serif;
-  }
+      body {
+        background: black;
+        color: white;
+      }
+.sample {
+  font-family: "Inter var", sans-serif;
+  background-color: black;
+  flex-basis: 100%;
+  font-size: 2rem;
+  padding: 3rem;
+  font-size: 6rem;
 }
+h1 {
+  font-size: 80px;
+  font-weight: 700;
+  letter-spacing: 0.55px;
+  line-height: 1.1;
+}
+
+h2 {
+  font-size: 45px;
+  font-weight: 500;
+  letter-spacing: 0px;
+  line-height: 1;
+}
+
+h3 {
+  font-size: 38px;
+  font-weight: 200;
+  letter-spacing: -1px;
+}
+
+h6 {
+  font-family: 'Space Mono';
+    letter-spacing: 1.5px;
+  font-size: 16px;
+  font-weight: normal;
+}
+
     </style>
   </head>
   <body>
-
+    <div class="sample">Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz Ææ Øø Åå 0123456789</div>
+    <h1>Get started on your path with Apostrophe.</h1>
+    <h2>Take your CMS to the next level.</h2>
+    <h3>Unlock Excellence.</h3>
+    <h6>Supercharged integrations and extensions</h6>
   </body>
   <script>
 
