--- a/type.html
+++ b/type.html
@@ -1,68 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Apostrophe Colors</title>
-    <link rel="preconnect" href="https://rsms.me/">
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://rsms.me/" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
     <style>
-body {
-  font-family: "Inter", sans-serif;
-}
       body {
-        background: black;
+        font-family: "Inter", sans-serif;
+        background-color: #1a1a1d;
         color: white;
+        padding: 3rem;
       }
-.sample {
-  font-family: "Inter var", sans-serif;
-  background-color: black;
-  flex-basis: 100%;
-  font-size: 2rem;
-  padding: 3rem;
-  font-size: 6rem;
-}
-h1 {
-  font-size: 80px;
-  font-weight: 700;
-  letter-spacing: 0.55px;
-  line-height: 1.1;
-}
+      .sample {
+        font-family: "Inter var", sans-serif;
+        background-color: black;
+        flex-basis: 100%;
+        font-size: 2rem;
+        padding: 3rem;
+        font-size: 4rem;
+        margin-bottom: 2rem;
+      }
 
-h2 {
-  font-size: 45px;
-  font-weight: 500;
-  letter-spacing: 0px;
-  line-height: 1;
-}
+      .name {
+        padding: 1rem;
+        font-size: 30%;
+      }
 
-h3 {
-  font-size: 38px;
-  font-weight: 200;
-  letter-spacing: -1px;
-}
+      .name span {
+        display: inline-block;
+        padding: 1rem;
+        background: white;
+        color: black;
+      }
 
-h6 {
-  font-family: 'Space Mono';
-    letter-spacing: 1.5px;
-  font-size: 16px;
-  font-weight: normal;
-}
+      .space {
+        font-family: "Space Mono", monospace;
+      }
 
+      .description {
+        font-family: "Inter var", sans-serif;
+        font-size: 14px;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+        text-transform: uppercase;
+        margin-bottom: 1rem;
+        opacity: 0.8;
+      }
+
+      h1 {
+        font-size: 80px;
+        font-weight: 700;
+        letter-spacing: 0.55px;
+        line-height: 1.1;
+      }
+
+      h2 {
+        font-size: 45px;
+        font-weight: 500;
+        letter-spacing: 0px;
+        line-height: 1;
+      }
+
+      h3 {
+        font-size: 38px;
+        font-weight: 200;
+        letter-spacing: -1px;
+      }
+
+      h6 {
+        letter-spacing: 1.5px;
+        font-size: 16px;
+        font-weight: normal;
+      }
     </style>
   </head>
   <body>
-    <div class="sample">Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz Ææ Øø Åå 0123456789</div>
-    <h1>Get started on your path with Apostrophe.</h1>
-    <h2>Take your CMS to the next level.</h2>
-    <h3>Unlock Excellence.</h3>
-    <h6>Supercharged integrations and extensions</h6>
+    <h3>Apostrophe type samples</h3>
+    <div class="sample">
+      <div class="name"><span>Inter</span></div>
+      Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy
+      Zz Ææ Øø Åå 0123456789
+    </div>
+    <div class="sample space">
+      <div class="name"><span>Space Mono</span></div>
+      Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy
+      Zz Ææ Øø Åå 0123456789
+    </div>
+    <h1>
+      <div class="description">Inter Bold, 80px</div>
+      Get started on your path with Apostrophe.</h1>
+    <h2>
+      <div class="description">Inter Medium, 45px</div>
+      Take your CMS to the next level.
+    </h2>
+    <h3>
+      <div class="description">Inter Light, 38px</div>
+      Unlock Excellence.</h3>
+    <h6 class="space">
+      <div class="description">Space Mono, 16px</div>
+      Supercharged integrations and extensions
+    </h6>
   </body>
-  <script>
-
-  </script>
+  <script></script>
 </html>
