--- a/colors.html
+++ b/colors.html
@@ -87,6 +87,9 @@ figcaption {
       <figcaption>#C83186</figcaption>
     </figure>
     <h2>Gradients</h2>
+    <figure><figcaption>linear-gradient(46deg, #CC9300 0%, #EA433A 26%, #B327BF 47%, #6666FF 76%, #00BF9A 100%)</figcaption></figure>
+    <figure><figcaption>linear-gradient(46deg, #CC9300 0%, #EA433A 47%, #B327BF 100%)</figcaption></figure>
+    <figure><figcaption>linear-gradient(48deg, #B327BF 0%, #6666FF 47%, #00C09A 100%)</figcaption></figure>
     <figure><figcaption>linear-gradient(180deg, #EAD800 0%, #FF664F 53%, #91A1D7 100%)</figcaption></figure>
     <figure><figcaption>linear-gradient(90deg,#966fed,#6065e5 50%,rgba(58,80,146,.98))</figcaption></figure>
   </body>
